Update AuthenticationServiceImpl.java